Trying to fix the huge image issue on iPhone.

--- a/style/index.css
+++ b/style/index.css
@@ -110,6 +110,7 @@ h2 {
     padding-bottom: 10%;
     display: flex;
     margin: 0 1%;
+    max-height: auto;
 }
 
 #favoriteimage {
